style: improve text contrast and general fixes

--- a/src/assets/sass/styles.sass
+++ b/src/assets/sass/styles.sass
@@ -20,6 +20,7 @@ body,
 #content-wrapper
   flex: 1
   background: $bg-color
+  color: #ffffff
 
 nav
   border-bottom: lightgray solid 0.1vmin
@@ -75,6 +76,10 @@ nav
 .trails-text > div
   overflow: hidden;
 
+.footer
+  img
+    height: 30px
+    margin: 16px
 
 .content .taglist
   list-style: none
